--- a/Pipfile
+++ b/Pipfile
@@ -4,11 +4,13 @@ url = "https://pypi.org/simple"
 verify_ssl = true
 
 [dev-packages]
+ipython = "*"
 
 [packages]
 django = "*"
 djangorestframework = "*"
 django-rest-knox = "*"
+django-crispy-forms = "*"
 
 [requires]
 python_version = "3.6"
