--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,14 @@
+asgiref==3.2.3
 backcall==0.1.0
 cffi==1.13.2
 cryptography==2.8
 decorator==4.4.1
-Django==2.2.7
+dj-database-url==0.5.0
+Django==3.0.2
 django-crispy-forms==1.8.1
 django-rest-knox==4.1.0
-djangorestframework==3.10.3
+djangorestframework==3.11.0
+gunicorn==20.0.4
 ipython==7.9.0
 ipython-genutils==0.2.0
 jedi==0.15.1
@@ -13,11 +16,15 @@ parso==0.5.1
 pexpect==4.7.0
 pickleshare==0.7.5
 prompt-toolkit==2.0.10
+
+psycopg2-binary==2.7.7
+
 ptyprocess==0.6.0
 pycparser==2.19
 Pygments==2.4.2
 pytz==2019.3
-six==1.13.0
+six==1.14.0
 sqlparse==0.3.0
 traitlets==4.3.3
 wcwidth==0.1.7
+whitenoise==5.0.1
