--- a/Pipfile
+++ b/Pipfile
@@ -14,6 +14,7 @@ django-crispy-forms = "*"
 gunicorn = "*"
 dj-database-url = "*"
 whitenoise = "*"
+psycopg2-binary = "*"
 
 [requires]
 python_version = "3.6"
